force-app/main/default/objects/Municipio__c/fields/codigo_departamento__c.field-meta.xml
<CustomField>
    <fullName>codigo_departamento__c</fullName>
    <label>codigo_departamento</label>
    <length>15</length>
    <type>Text</type>
</CustomField>