force-app/main/default/objects/Municipio__c/fields/Codigo_Departamento_Municipio__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Departamento_Municipio__c</fullName>
    <externalId>true</externalId>
    <label>Código Departamento Municipio</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>