force-app/main/default/objects/Municipio__c/fields/Codigo_Municipio__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Municipio__c</fullName>
    <label>Código Municipio</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>