force-app/main/default/objects/Municipio__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departamento</label>
    <referenceTo>Departamento__c</referenceTo>
    <relationshipLabel>Municipios</relationshipLabel>
    <relationshipName>Municipios</relationshipName>
    <type>Lookup</type>
</CustomField>