force-app/main/default/objects/Municipio__c/fields/nombre_municipio__c.field-meta.xml
<CustomField>
    <fullName>nombre_municipio__c</fullName>
    <label>nombre_municipio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>