force-app/main/default/objects/Municipio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>codigo_pais__c</columns>
    <columns>codigo_departamento__c</columns>
    <columns>Codigo_Municipio__c</columns>
    <columns>nombre_municipio__c</columns>
    <columns>Codigo_Departamento_Municipio__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>